--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://github.com/ColJCSmith.github.io/employeeviewer",
+  "homepage": "https://github.com/ColJCSmith.github.io/employeeviewer",
   "name": "employeeviewer",
   "version": "0.1.0",
   "private": true,
